@@ -2,7 +2,7 @@
 Copyright (C) 2013 Hannes von Haugwitz <hannes@vonhaugwitz.com>
 Copyright (C) 2014-15 Christian Franke
 
-$Id: update-smart-drivedb.8.in 4184 2015-12-14 19:20:44Z chrfranke $
+$Id: update-smart-drivedb.8.in 4193 2015-12-19 14:43:50Z chrfranke $
 
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -23,6 +23,11 @@ update-smart-drivedb \- update smartmontools drive database
 .RI [ DESTFILE ]
 
 .SH "DESCRIPTION"
+.\" %IF NOT OS ALL
+.\"! [This man page is generated for the OS_MAN_FILTER version of smartmontools.
+.\"! It does not contain info specific to other platforms.]
+.\"! .PP
+.\" %ENDIF NOT OS ALL
 .B update-smart-drivedb
 updates
 .B /usr/local/share/smartmontools/drivedb.h
@@ -34,18 +39,14 @@ It tries to download first from the current branch and then from
 trunk. The tools used for downloading are either
 .BR curl (1),
 .BR wget (1),
-.\" %IF NOT OS FreeBSD OpenBSD
-.BR lynx (1)
-.\" %ENDIF NOT OS FreeBSD OpenBSD
-.\" %IF OS FreeBSD
 .BR lynx (1),
+.\" %IF OS FreeBSD
 .BR fetch (1)
-[FreeBSD only]
+[FreeBSD only],
 .\" %ENDIF OS FreeBSD
 .\" %IF OS OpenBSD
-.BR lynx (1),
 .BR ftp (1)
-[OpenBSD only]
+[OpenBSD only],
 .\" %ENDIF OS OpenBSD
 or
 .BR svn (1).
@@ -162,4 +163,4 @@ Alternatively send the info to the smartmontools support mailing list:
 .SH PACKAGE VERSION
 CURRENT_SVN_VERSION CURRENT_SVN_DATE CURRENT_SVN_REV
 .br
-$Id: update-smart-drivedb.8.in 4184 2015-12-14 19:20:44Z chrfranke $
+$Id: update-smart-drivedb.8.in 4193 2015-12-19 14:43:50Z chrfranke $
