@@ -1,8 +1,10 @@
-$Id: ChangeLog 4192 2015-12-19 13:59:40Z chrfranke $
+$Id: ChangeLog 4193 2015-12-19 14:43:50Z chrfranke $
 
 2015-12-19  Christian Franke  <franke@computer.org>
 
 	Makefile.am: Fix path of 'smart-pkg-uninstall' (Regression from r4190).
+
+	update-smart-drivedb.8.in: Fix platform specific formatting.
 
 2015-12-18  Alex Samorukov <samm@os2.kiev.ua>
 
